2000-09-13  Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c: (copy_items), (move_items),
	(link_items):
	Fix a problem where file names would get escaped twice in the
	copy engine and caused files to get moved/copied with an
	escaped path.

	* modules/file-method.c: (get_path_from_uri):
	Tweak some white space.

2000-09-12  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-mime-magic.c:
	(gnome_vfs_mime_get_magic_table): Add the missing call to actually
	parse the text file. We never noticed it was missing, because we
	were getting the binary form of that table until recently.

2000-09-12  Seth Nickell  <seth@eazel.com>

	* modules/Makefile.am:
	add building of foobar-method.c
	
	* modules/default-modules.conf:
	register foobar-method.c to handle "foobar:"
	
	* modules/foobar-method.c: (translate_uri),
	(get_operation_configuration), (parse_results_text),
	(load_config_file), (do_open), (do_create), (do_close), (do_read),
	(do_write), (do_seek), (do_tell), (do_open_directory),
	(do_close_directory), (do_read_directory), (do_get_file_info),
	(do_get_file_info_from_handle), (do_is_local), (do_make_directory),
	(do_remove_directory), (do_move), (do_unlink), (do_check_same_fs),
	(do_set_file_info), (do_truncate), (do_truncate_handle),
	(do_find_directory), (do_create_symbolic_link), (vfs_module_init),
	(vfs_module_shutdown):
	Foobar is a gnome-vfs debug module that allows you to redirect
	calls to another underlying method, and intercept and manipulate
	the calls, adding delays or returning errors to the client.

2000-09-11  Mathieu Lacage  <mathieu@eazel.com>

	* test/test-uri.c: (main): remove the tests from compilation folowing
	pavel and Darin advices.

2000-09-11  Mathieu Lacage  <mathieu@eazel.com>

	* test/test-uri.c: (main): add 2 new tests which fail and should be
	fixed somehow. I dunno how to fix them but they cause crashes in nautilus.
	/tmp/#test# is not taken into account by gnome_vfs_uri_new.
